plugins {
    id "java-library"
    // Roadmap R2.5: static analysis, run as its own task so the test loop keeps its pace.
    id "com.github.spotbugs" version "6.0.26"
    id "pmd"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

compileJava.options.encoding = "UTF-8"
compileTestJava.options.encoding = "UTF-8"

dependencies {
    api "com.badlogicgames.gdx:gdx:$gdxVersion"
    api "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"

    testImplementation platform("org.junit:junit-bom:$junitVersion")
    testImplementation "org.junit.jupiter:junit-jupiter"
}

test {
    useJUnitPlatform()
    maxHeapSize = "640m"

    // Two test JVMs when the machine has the cores. Every test class builds its own state and seeds its own
    // simulation, so running two classes at once changes nothing except the wall clock; the property is there
    // for machines that prefer to stay serial.
    if (Runtime.runtime.availableProcessors() >= 2 && !project.hasProperty("serialTests")) {
        maxParallelForks = 2
    }

    // Local fast loop (roadmap R2.6): `./gradlew :core:test -PfastTests` leaves out the three suites that sweep
    // whole runs. Measured on 2026-09-16: TrialSimulationTest 109 s, RewardCardSimulationTest 106 s,
    // AscensionGateTest 96 s -- 311 of the suite's 322 seconds of test time, spent by six cases. The other 154
    // classes cost about ten seconds together, so a slice can be verified in seconds instead of minutes. CI
    // never passes the flag, so the suite that judges a push is still the complete one, and the sweeps still run
    // locally at every phase boundary. The flag removes duplicated work; it does not lower a ceiling.
    if (project.hasProperty("fastTests")) {
        filter {
            excludeTestsMatching "*RewardCardSimulationTest"
            excludeTestsMatching "*TrialSimulationTest"
            excludeTestsMatching "*AscensionGateTest"
        }
    }
}

// --- Static analysis (roadmap R2.5) -----------------------------------------------------------------------
// Two analysers with different eyes: SpotBugs reads the compiled bytecode (null dereferences, ignored return
// values, exposure of mutable state), PMD reads the source (unused or shadowing declarations, missing braces,
// needless object churn). Neither is wired into `test`, so the fast loop stays fast; `ciStaticAnalysis` is what
// the workflow runs, and `check` stays the aggregate of tests plus both reports.
//
// Findings are triaged, never silenced: every exclusion below names a rule AND the file or pattern it covers, so
// the reports stay actionable. The triage record lives in docs/STATIC_ANALYSIS.md.

spotbugs {
    toolVersion = "4.8.6"
    effort.set(com.github.spotbugs.snom.Effort.valueOf("MAX"))
    reportLevel.set(com.github.spotbugs.snom.Confidence.valueOf("LOW"))
    excludeFilter = file("config/spotbugs/exclude.xml")
}

pmd {
    toolVersion = "7.7.0"
    consoleOutput = true
    ruleSetFiles = files("config/pmd/ruleset.xml")
    ruleSets = []
}

tasks.withType(com.github.spotbugs.snom.SpotBugsTask).configureEach {
    reports {
        html.required = true
        xml.required = true
    }
}

tasks.withType(Pmd).configureEach {
    ignoreFailures = false
}

// Test sources get the same rules minus four that describe test-writing style rather than defects (see
// config/pmd/ruleset-tests.xml for each reason). A broken test is as expensive as a broken system, so the
// correctness rules -- unused members, resource leaks, float loop indices, collection choices -- stay on.
tasks.named("pmdTest") {
    ruleSetFiles = files("config/pmd/ruleset-tests.xml")
}

tasks.register("ciStaticAnalysis") {
    group = "verification"
    description = "Both analysers over main and test sources; fails on any finding they have not been told to ignore."
    dependsOn "spotbugsMain", "spotbugsTest", "pmdMain", "pmdTest"
}
